--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -23,7 +23,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./src
           push: true
           tags: kenyahmis/dwhsync:latest
-          file: ./src/Dockerfile
