--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3.4'
 services:
-  dwhlive:
-      image: kenyahmis/dwhlive:${TAG}
-      container_name: dwhlive
+  dwhsync:
+      image: kenyahmis/dwhsync:${TAG}
+      container_name: dwhsync
       restart: always
       environment:
-        - ConnectionStrings__LiveConnection=Data Source=${DB_HOST},${DB_PORT};Initial Catalog=${DB_NAME};Persist Security Info=True;User ID=${DB_USER};Password=${DB_PASSWORD};Pooling=True;MultipleActiveResultSets=True;TrustServerCertificate=True;
-        - AllowedCorsOrigins__0=${APP_ORIGIN_0}
-        - AllowedCorsOrigins__1=${APP_ORIGIN_1}
-        - ServicesApi__NDW=${APP_SVC_NDW}
+        - ConnectionStrings__LiveConnection=Data Source=${DB_ORIGIN_HOST},${DB_ORIGIN_PORT};Initial Catalog=${DB_ORIGIN_NAME};Persist Security Info=True;User ID=${DB_ORIGIN_USER};Password=${DB_ORIGIN_PASSWORD};Pooling=True;MultipleActiveResultSets=True;TrustServerCertificate=True;
+        - ConnectionStrings__LiveConnection=Data Source=${DB_SOURCE_HOST},${DB_SOURCE_PORT};Initial Catalog=${DB_SOURCE_NAME};Persist Security Info=True;User ID=${DB_SOURCE_USER};Password=${DB_SOURCE_PASSWORD};Pooling=True;MultipleActiveResultSets=True;TrustServerCertificate=True;
+        - ConnectionStrings__LiveConnection=Data Source=${DB_TARGET_HOST},${DB_TARGET_PORT};Initial Catalog=${DB_TARGET_NAME};Persist Security Info=True;User ID=${DB_TARGET_USER};Password=${DB_TARGET_PASSWORD};Pooling=True;MultipleActiveResultSets=True;TrustServerCertificate=True;
+        - Transfers__Batch=${APP_BATCH}
+        - Transfers__Targets__1=${APP_TABLE_1}
       ports:
         - "${APP_PORT}:${APP_HOST_PORT}"
