--- a/src/agent/src/Lap.Agent/Lap.Agent.csproj
+++ b/src/agent/src/Lap.Agent/Lap.Agent.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Dotmim.Sync.SqlServer" Version="1.3.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0" />
