--- a/src/agent/src/Lap.Agent/appsettings.json
+++ b/src/agent/src/Lap.Agent/appsettings.json
@@ -30,8 +30,6 @@
     },
     "Transfers": {
         "Batch": 5000,
-        "Targets": [
-            "linelist_hts_tests"
-        ]
+        "Targets": []
     }
 }
